--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -595,11 +595,11 @@
                             <br/>
                             <h3>LatinChain Token info</h3>
                             <br/>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
                                     <h5 translate="no">LatinChain Token foundations</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         LatinChain Token is based on the LatinChain Platform project (online since 2021).<br/>
                                         Mainnet:<br/>https://latinchain.pinet.com<br/>
@@ -607,62 +607,62 @@
                                     </strong>
                                 </div>
                             </div>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
                                     <h5 translate="no">Max Supply</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         100,000,000 LatinChain<br/>
                                         100,000,000,000 Pi (Pi Network)
                                     </strong>
                                 </div>
                             </div>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
-                                <div style="margin-bottom:5px" class="border-bottom">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
+                                <div style="margin-bottom:5px;" class="border-bottom">
                                     <h5 translate="no">Initial Pi Liquidity Pool Supply</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         1,000 LatinChain | 1,000 Pi
                                     </strong>
                                 </div>
                             </div>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
                                     <h5 translate="no">Reserved for Pi Liquidity Pool Supply</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         10,000,000 LatinChain
                                     </strong>
                                 </div>
                             </div>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
                                     <h5 translate="no">Reserved for Other Exchanges</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         10,000,000 LatinChain
                                     </strong>
                                 </div>
                             </div>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
                                     <h5 translate="no">Reserved for Developers and LatinChain related</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         20,000,000 LatinChain
                                     </strong>
                                 </div>
                             </div>
-                            <div style="margin-bottom:5px; padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
+                            <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
                                     <h5 translate="no">Reserved for LatinChain future and current projects, and LatinChain reserve</h5>
                                 </div>
-                                <div style="margin-bottom:5px; padding: 5px">
+                                <div style="margin-bottom:5px;">
                                     <strong>
                                         60,000,000 LatinChain
                                     </strong>
