--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -207,9 +207,7 @@
                                 </div>
                             </div>
                             
-                            <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
-                                <!-- LatinChain Ad responsive 2 -->
-                                
+                            <!--<div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                                 <ins class="adsbygoogle"
                                      style="display:block"
                                      data-ad-client="ca-pub-2334449220276386"
@@ -221,9 +219,9 @@
                                 </script>
                                 
                                 <br/>
-                            </div>
+                            </div>-->
                             
-                            <div class="row">    
+                            <!--<div class="row">    
                                 <div style="margin-bottom:5px" class="col-12">
                                     <div style="padding:1px; width: 100%; text-align: center" class="border-gradient-rounded">
                                         <div style="margin-bottom:5px" class="border-bottom">
@@ -247,7 +245,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div>-->
                             <!--<br/>
                             <div class="container rounded" style="text-align:center; max-width: 810px; border:3px solid; padding:5px;">
                                 <div class="row">
