--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1423,6 +1423,9 @@
                                 <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="href-external col-12 btn font-weight-bold text-white" style="border: 2px solid; background-color: #703d92; border-color: #703d92;"><div style=""><i class="fa-solid fa-cubes-stacked"></i></div><div style="font-size:100%;">Stake Pi to Boost Rank of LatinChain Mainnet</div></a>
                                 <a t-if="mainnet in ['Testnet ON', 'Testnet OFF']" href="https://ecosystem.pinet.com/apps/63d38f4fa9a2245a1c0ef9cf" target="_blank" class="href-external col-12 btn font-weight-bold text-white" style="border: 2px solid; background-color: #703d92; border-color: #703d92;"><div style=""><i class="fa-solid fa-cubes-stacked"></i></div><div style="font-size:100%;">Stake Pi to Boost Rank of LatinChain Testnet</div></a>
                             </div>
+                            <div style="margin-bottom:5px;">
+                                <a href="https://promote.mexc.com/r/U2hkpZK0" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-right-left"></i></div><div style="font-size:100%;" translate="no">JOIN MEXC AND TRADE PI</div><div style="font-size:80%;">Pi KYB ready</div></a>
+                            </div>
                         </div>
                         
                         <div t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" style="margin-bottom:5px; padding:10px; width: 100%; text-align: center" class="border-gradient-rounded">
@@ -1530,7 +1533,6 @@
                                 <a t-if="mainnet in ['Testnet ON', 'Testnet OFF']" href="https://latinchain.pinet.com" target="_blank" class="col-12 gotomainnet btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-network-wired"></i></div><div style="font-size:100%;">Go to Mainnet</div></a>
                             </div>
                         </div>
-                        
                         <div style="margin-bottom:5px; padding:10px; width: 100%; text-align: center;" class="border-gradient-rounded showInterstitialAd">
                             <div style="margin-bottom:5px" class="border-bottom">
                                 <h5 translate="no"><strong><div style="display:inline;">#LatinChainTV &#128250;</div></strong></h5>
@@ -1768,12 +1770,13 @@
                             </t>-->
                             
                             <div style="margin-bottom:5px;">
-                                <a href="https://promote.mexc.com/r/U2hkpZK0" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-door-open"></i></div><div style="font-size:100%;" translate="no">JOIN MEXC</div><div style="font-size:80%;">Pi KYB ready</div></a>
+                                <a href="https://promote.mexc.com/r/U2hkpZK0" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-right-left"></i></div><div style="font-size:100%;" translate="no">JOIN MEXC AND TRADE PI</div><div style="font-size:80%;">Pi KYB ready</div></a>
                             </div>
-                            
+                            <!--
                             <div style="margin-bottom:5px;">
                                 <a href="https://www.mexc.com/exchange/PI_USDT" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-right-left"></i></div><div style="font-size:100%;" translate="no">TRADE PI</div><div style="font-size:80%;">On MEXC</div></a>
                             </div>
+                            -->
                             
                             <!--
                             <div style="margin-bottom:5px; display:none">
