--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1551,6 +1551,7 @@
                                     <button style="max-width: 130px" class="col-12 btn btn-danger font-weight-bold youtube-social" ><div style="display:inline;"><i class="fab fa-youtube"></i></div> <div style="display:inline;">channel</div></button>
                                 </div>
                                 -->
+                                <div style="margin-bottom:5px" translate="no">#Comment #Like #Share #Follow</div>
                                 <div style="margin-bottom:5px" translate="no">
                                     <button class="btn btn-danger font-weight-bold streamerzoneboard" ><div style="display:inline;"><i class="fa-solid fa-tv"></i></div> <div style="display:inline;">LatinChain dSocial</div></button>
                                 </div>
