--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -10,7 +10,7 @@
 
                 <head>
                     <meta charset="UTF-8" />
-                    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+                    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
                     <title>Play Chess Against the best AI Chess Player (Stockfish)</title>
                     <meta name="description" content="Play Chess Against the best AI Chess Player (Stockfish)" />
@@ -129,7 +129,10 @@
                             }
                         </style>
                         
-                        <style>    
+                        <style>
+                            html {
+                                overscroll-behavior-y: none;
+                            }
                              /* The side navigation menu */
                             .sidenav {
                               height: 100%; /* 100% Full-height */
