--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -113,19 +113,17 @@
                                 overscroll-behavior-y: none;
                             }
                             
-                            html {
-                                /* IMPORTANTE: Usa el mismo color HEX exacto de tu modo oscuro 
-                                background-color: #1a1a1a;
-                                */
+                            .darkmode--activated html {
+                                /* IMPORTANTE: Usa el mismo color HEX exacto de tu modo oscuro */
+                                background-color: #d3d3d3;
                                 
                                 /* Asegura que el html ocupe siempre toda la altura de la ventana */
                                 min-height: 100%;
                             }
 
-                            body {
-                                /* El body también debe tener el color, por si acaso 
-                                background-color: #1a1a1a;
-                                */
+                            .darkmode--activated body {
+                                /* El body también debe tener el color, por si acaso */
+                                background-color: #d3d3d3;
                                 
                                 /* Asegura que el body estire para cubrir cualquier hueco vertical */
                                 min-height: 100vh;
