--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -113,17 +113,17 @@
                                 overscroll-behavior-y: none;
                             }
                             
-                            .darkmode--activated html {
+                            html {
                                 /* IMPORTANTE: Usa el mismo color HEX exacto de tu modo oscuro */
-                                background-color: #d3d3d3;
+                                background-color: #fff;
                                 
                                 /* Asegura que el html ocupe siempre toda la altura de la ventana */
                                 min-height: 100%;
                             }
 
-                            .darkmode--activated body {
+                            body {
                                 /* El body también debe tener el color, por si acaso */
-                                background-color: #d3d3d3;
+                                background-color: #fff;
                                 
                                 /* Asegura que el body estire para cubrir cualquier hueco vertical */
                                 min-height: 100vh;
