--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -113,24 +113,12 @@
                                 overscroll-behavior-y: none;
                             }
                             
-                            /*.darkmode--activated html, .darkmode--activated body {
+                            .darkmode--activated html, .darkmode--activated body {
                                 background-color: #d3d3d3 !important;
                                 min-height: 100vh;
                                 width: 100%;
                                 margin: 0;
                                 padding: 0;
-                            }*/
-                            
-                            .darkmode--activated body::before {
-                                content: "";
-                                position: fixed;
-                                top: 0;
-                                left: 0;
-                                width: 100vw;
-                                height: 100vh;
-                                background-color: #d3d3d3;
-                                z-index: -9999;
-                                pointer-events: none;
                             }
                             
                             .sticky {
