--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -10,7 +10,7 @@
 
                 <head>
                     <meta charset="UTF-8" />
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+                    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 
                     <title>Play Chess Against the best AI Chess Player (Stockfish)</title>
                     <meta name="description" content="Play Chess Against the best AI Chess Player (Stockfish)" />
