--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -108,6 +108,15 @@
                         
                         </div>
                         <style>
+                            html, body {
+                                /* Desactiva el rebote vertical y el efecto de "brillo" en Android */
+                                overscroll-behavior-y: none; 
+                                
+                                /* Asegura que ocupen todo el alto */
+                                height: 100%; 
+                                margin: 0;
+                            }
+                            
                             .sticky {
                               position: fixed;
                               top: 0;
