--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -112,6 +112,7 @@
                                 box-sizing: border-box;
                                 margin: 0;
                                 padding: 0;
+                                backdrop-filter: none;
                             }
                             body {
                                 /*font-family: 'Montserrat', sans-serif;
