--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -109,8 +109,8 @@
                         </div>
                         <style>
                             .darkmode--activated * {
-                                -webkit-backdrop-filter: none;
-                                backdrop-filter: none;
+                                -webkit-backdrop-filter: blur(5px);
+                                backdrop-filter: blur(5px);
                             }
                             
                             .sticky {
