--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -108,6 +108,10 @@
                         
                         </div>
                         <style>
+                            html {
+                                scroll-behavior: smooth;
+                            }
+                            
                             .sticky {
                               position: fixed;
                               top: 0;
