--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_chess.xml
@@ -114,6 +114,9 @@
                             body {
                                 background-color: #d3d3d3; /* Color del contenido */
                             }
+                            html, body {
+                                overscroll-behavior-y: none; /* Bloquea el efecto elástico */
+                            }
                             
                             .sticky {
                               position: fixed;
