--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1260,7 +1260,7 @@
                         <div style="color: #ffffff !important; background-color: #1f2434 !important;">
                             <div>
                                 <div style="display: inline" t-if="discount_active and discount_percentage">
-                                    Seasonal discount (<t t-esc="discount_percentage" />%)
+                                    Seasonal discount (-<t t-esc="discount_percentage" />%)
                                 </div>
                                 <div style="display: inline" t-if="not discount_active">
                                     Payment amount
@@ -1388,7 +1388,7 @@
                         <t t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
                             <div t-if="discount_active and discount_percentage" style="margin-bottom:5px; padding:10px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
-                                    <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount <t t-esc="discount_percentage"/>%</div></strong></h5>
+                                    <h5 translate="no"><strong><div style="display:inline; font-size: 90%; font-style: italic;">#SeasonalDiscount -<t t-esc="discount_percentage"/>%</div></strong></h5>
                                 </div>
                                 <div style="margin-bottom:5px">
                                     <a href="/pinetwork"><img src="/website_pinetwork_games_odoo/static/src/img/holiday/holiday-sales.png?v=1.104" alt="Holiday sales" class="img-fluid" style="max-width: 350px; border-radius: 20px;" width="100%" height="200px" /></a>
