--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -331,7 +331,7 @@
                                         <div>
                                             <div>
                                                 <div style="display: inline" t-if="discount_active and discount_percentage">
-                                                    Seasonal discount (<t t-esc="discount_percentage" />%)
+                                                    Seasonal discount (-<t t-esc="discount_percentage" />%)
                                                 </div>
                                                 <div style="display: inline" t-if="not discount_active">
                                                     Payment amount
