--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -487,7 +487,7 @@
                             <br/>
                             <h3>You can find these, our most notable books by ASIN or ISBN, in bookstores as Amazon (globally), Iberlibro (Europe) or others around the world. There are also courses available.</h3>
                             <br/>
-                            <div>
+                            <div style="margin-bottom:5px;">
                                 <div class="input-group input-group-lg">
                                   <span class="input-group-text" id="inputGroup-sizing-lg" style="color: black !important"><i class="fa-solid fa-magnifying-glass"></i></span>
                                   <input type="text" class="search-collectibles form-control" placeholder="Search collectibles" aria-label="Search collectibles" aria-describedby="inputGroup-sizing-lg" />
